2016-01-07  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      Fixups for env_copy with large files (32bit Windows)

2016-01-01  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.

2015-12-21  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      Update to LMDB 0.9.70
    * generic/lmdb.h: Update source code.
    * generic/midl.c: Update source code.
    * generic/midl.h: Update source code.
    * generic/mdb.c: Add a temp solution to fix build
      fail at MinGW (NTSTATUS not define)
    * configure.ac: Windows needs to link ntdll.
      Update for ITS#8324 incremental DB file growth
      for Windows solution.

2015-11-27  Danilo Chang  <ray2501@gmail.com>

    * Set version to v0.2.4
    * generic/mdb.c: Update source code.
      LMDB 0.9.16 with extra fixes from github.

2015-11-25  Danilo Chang  <ray2501@gmail.com>

    * generic/tclmdb.c: env_handle open command add option
      -nosubdir

2015-11-24  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      LMDB 0.9.16 with extra fixes from github.

2015-11-13  Danilo Chang  <ray2501@gmail.com>

    * Set version to v0.2.3
    * generic/tclmdb.c: env_handle open command add option
      -fixedmap
    * generic/tclmdb.c: Add a thread exit handler to delete
      hash table.
    * generic/tclmdb.c: Try to use ThreadSpecificData to
      per thread hash table.
    * generic/mdb.c: Update source code.
      LMDB 0.9.16 with extra fixes from github.

2015-11-08  Danilo Chang  <ray2501@gmail.com>

    * Set version to v0.2.2
    * generic/tclmdb.c: Fix cursor_handle renew issue.
    * generic/tclmdb.c: Implement dbi_handle del command
      behavior.

2015-11-07  Danilo Chang  <ray2501@gmail.com>

    * generic/tclmdb.c: Add more check in env_handle copy  
      command. Fix --with-system-lmdb option issue.
    * Set version to v0.2.1
    * generic/tclmdb.c: Implement cursor_handle get command